--- a/setup.yml
+++ b/setup.yml
@@ -4,8 +4,8 @@
 #   * https://github.com/jalefkowit/vagrant-ansible-wordpress
 #   * https://www.digitalocean.com/community/articles/how-to-install-wordpress-on-centos-6--2
 #   * https://www.digitalocean.com/community/articles/how-to-install-linux-apache-mysql-php-lamp-stack-on-centos-6
-- include: nginx.yml
-- hosts: vagrant
+#- include: nginx.yml
+- hosts: all
   user: vagrant
   sudo: yes
   tasks:
