--- a/setup.yml
+++ b/setup.yml
@@ -8,20 +8,24 @@
 - hosts: all
   user: vagrant
   sudo: yes
+  vars:
+    vhostTemplatePath: templates/vhost
+    mysqlTemplatePath: templates/mysql
   tasks:
 #    - name: update apt cache
 #      yum: update_cache=yes
     - name: Install packages
       yum: pkg={{item}} state=latest
       with_items:
+        - unzip
         - httpd
-#        - unzip
         - mysql-server
+        - MySQL-python
+#        - python-mysqldb
         - php
         - php-mysql
         - php-cli
         - php-gd
-#        - python-mysqldb
 #        - php5-curl
 #        - php5-sqlite
 #        - php5-xmlrpc
@@ -32,18 +36,18 @@
       service: name=httpd state=started
     - name: Start mysqld
       service: name=mysqld state=started
-# sudo chkconfig httpd on; sudo chkconfig mysqld on      
+    - name: Startup auto
+      command: chkconfig httpd on
+      command: chkconfig mysqld on
 #    - name: Activate mods
 #      command: a2enmod {{item}}
 #      with_items:
 #        - mod_rewrite
-#    - name: Start MySQL
-#      service: name=mysql state=started
 #    - name: Setup MySQL root
-#      mysql_user: name=root password=vagrant host=$item state=present
+#      mysql_user: name=root password=vagrant host={{item}} state=present
 #      with_items:
-#        - $ansible_hostname
-#        - 127.0.1.1
+#        - "{{ansible_hostname}}"
+#        - 127.0.0.1
 #        - ::1
 #        - localhost
 #    - name: Setup root creds
@@ -51,7 +55,7 @@
 #    - name: Delete blank MySQL users
 #      mysql_user: name="" host={{item} state=absent
 #      with_items:
-#       - $ansible_hostname
+#       - "{{ansible_hostname}}"
 #       - 127.0.1.1
 #       - ::1
 #       - localhost
@@ -65,14 +69,14 @@
 #      user: name=vagrant gorups=www-data append=yes
 #    - name: Make directory
 #      file: path=/var/www/wordpress state=directory owner=www-data group=www-data mode=0755
-#    - name: Download WordPRess
-#      get_url: url=http://wordpress.org/latest.zip dest=/tmp/
+    - name: Download WordPRess
+      get_url: url=http://wordpress.org/latest.zip dest=/tmp/
 #    - name: Unzip WordPress
 #      command: unzip /tmp/latest.zip -d /tmp/
 #    - name: set WordPress file permissions
 #      file: path=/tmp/wordpress state=directory recurse=yes owner=www-data group=www-data mode=0775
 #    - name: Move wordpress
-#      command: mv /tmp/wordpress /var/www/
+#      command: mv /tmp/wordpress /var/www/html
 #    - name: copy virtual host setup
 #      template: src={{vhostTemplatePath}} dest=/etc/apache2/sites-available/
 #    - name: Activate virtual host
