Finally works! Just using the default vagrant user instead of a separate wordpress user. Need to clean everything up still.

--- a/roles/nginx/templates/wordpress.conf
+++ b/roles/nginx/templates/wordpress.conf
@@ -1,7 +1,13 @@
+#server {
+#    listen 80;
+#    server_name www.*{{ ansible_hostname }}.local;
+#    return 301 $scheme://{{ ansible_hostname }}$request_uri
+#}
+
 server {
-    listen       80 default_server;
-    server_name  {{ ansible_hostname }};
-    root /srv/wordpress/ ;
+    listen       80;
+    server_name  {{ ansible_hostname }}.local;
+    root {{ wp_dir }}/wordpress;
 
 client_max_body_size 64M;
 
@@ -24,8 +30,7 @@ client_max_body_size 64M;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             fastcgi_index index.php;
             fastcgi_pass  unix:/var/run/php-fpm/wordpress.sock;
-            fastcgi_param   SCRIPT_FILENAME
-                            $document_root$fastcgi_script_name;
+            fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include       fastcgi_params;
     }
 }
