--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -2,6 +2,13 @@
 - name: Install nginx
   yum: name=nginx state=present
 
+#- name: Delete unused configs
+#  command: rm -rf /etc/nginx/conf.d/*
+
+- name: Copy nginx configuration for default
+  template: src=default.conf dest=/etc/nginx/conf.d/default.conf
+  notify: restart nginx
+
 - name: Copy nginx configuration for wordpress
   template: src=wordpress.conf dest=/etc/nginx/conf.d/wordpress.conf
   notify: restart nginx
