--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -2,14 +2,17 @@
 - name: Download Wordpress
   get_url: url=http://wordpress.org/latest.tar.gz dest=/tmp/latest.tar.gz
 
+- name: Create directory
+  command: mkdir -p {{wp_dir}}
+
 - name: Extract archive
-  command: /bin/tar xvf /tmp/latest.tar.gz -C /var/www/html/
+  command: /bin/tar xvf /tmp/latest.tar.gz -C {{ wp_dir }}
 
 - name: Delete download
   command: rm /tmp/latest.tar.gz
 
 #- name: Add group "wordpress"
-#  group: name=wordpress
+#  group: name=wordpressre
 #
 #- name: Add user "wordpress"
 #  user: name=wordpress group=wordpress home=/srv/wordpress/
@@ -26,7 +29,7 @@
   mysql_user: name={{ wp_db_user }} password={{ wp_db_password }} priv={{ wp_db_name }}.*:ALL host='localhost' state=present
 
 - name: Copy Wordpress config file
-  template: src=wp-config.php dest=/var/www/html/wordpress
+  template: src=wp-config.php dest="{{ wp_dir }}/wordpress/"
 
 #- name: Change ownership of Wordpress installation
 #  file: path=/srv/wordpress/ owner=wordpress group=wordpress state=directory recurse=yes
