--- a/roles/php-fpm/templates/wordpress.conf
+++ b/roles/php-fpm/templates/wordpress.conf
@@ -4,14 +4,12 @@ listen.owner = nginx
 listen.group = nginx
 listen.mode = 0660
 user = vagrant
-#wordpress
 group = vagrant
-#wordpress
 pm = dynamic
 pm.max_children = 10
 pm.start_servers = 1
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 pm.max_requests = 500
-chdir = /var/www/html/jacobblock.com/wordpress/
-php_admin_value[open_basedir] = /var/www/html/jacobblock.com/wordpress/:/tmp
+chdir = {{ wp_dir }}wordpress/
+php_admin_value[open_basedir] = {{ wp_dir }}wordpress/:/tmp
